<resources>
    <string name="app_name">MR.WORLDWIDE FOODS</string>
    <string name="specialOfferButton">Happy Hour Offer</string>
    <string name="finishOrderButton">Order The Selected</string>
    <string name="personAddressText">Where do we Deliver?</string>
    <string name="personNameText">Whats your Name?</string>
    <string name="personContactText">Let us contact you when we are there!</string>
    <string name="EuroSign">€</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_food">Some Food</string>
    <string name="some_description">This is a description</string>
    <string name="some_price">00.00</string>
    <string name="some_amount">1</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="complete_order">Complete your Order</string>
    <string name="order_for_name">Name</string>
    <string name="order_for_address">Address</string>
    <string name="order_for_contact">Contact</string>
    <string name="check_your_order">Check your Order</string>
    <string name="_tt">Total:</string>
</resources>