<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/checkOrderButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/checkOrderButton"
        app:layout_constraintBottom_toBottomOf="@id/checkOrderButton"
        android:text="@string/some_price"
        android:textColor="@color/main_teal"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/totalText"
        app:layout_constraintBottom_toBottomOf="@id/totalText"
        app:layout_constraintLeft_toRightOf="@id/totalText"
        android:text="@string/EuroSign"
        android:textColor="@color/main_teal"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/totalText"
        app:layout_constraintBottom_toBottomOf="@id/totalText"
        app:layout_constraintRight_toLeftOf="@id/totalText"
        android:text="@string/_tt"
        android:textColor="@color/main_teal"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/completeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/complete_order"
        android:layout_marginBottom="75dp"/>

    <Button
        android:id="@+id/checkOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_order"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nameText" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/yourName"
        android:text="@string/order_for_name"
        />

    <EditText
        android:id="@+id/yourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/addressText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/yourAddress"
        android:text="@string/order_for_address"
        />

    <EditText
        android:id="@+id/yourAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/yourContact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yourName"
        />

    <TextView
        android:id="@+id/contactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/yourContact"
        android:text="@string/order_for_contact"
        />

    <EditText
        android:id="@+id/yourContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/completeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>