<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodcardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#CAC5C5"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/samplefood"

            />

        <TextView
            android:id="@+id/foodTitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/foodImage"
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:text="@string/some_food"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:id="@+id/foodDescription"
            android:layout_height="wrap_content"
            android:layout_width="175dp"
            app:layout_constraintLeft_toRightOf="@id/foodImage"
            app:layout_constraintTop_toBottomOf="@id/foodTitle"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:text="@string/some_description"
            android:textColor="#2E2E2E"
            />
        <TextView
            android:id="@+id/moneySign"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/EuroSign"
            />
        <TextView
            android:id="@+id/foodPrice"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/moneySign"
            app:layout_constraintRight_toLeftOf="@id/moneySign"
            app:layout_constraintBottom_toBottomOf="@+id/moneySign"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/some_price"
            android:layout_marginEnd="2dp"
            />

        <TextView
            android:id="@+id/foodAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/plusButton"
            app:layout_constraintRight_toLeftOf="@id/plusButton"
            app:layout_constraintTop_toTopOf="@id/plusButton"
            android:text="@string/some_amount"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="5dp"
            />

        <ImageButton
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_box"
            android:backgroundTint="@color/transparent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="0dp"
            />
        <ImageButton
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_minus_box"
            android:backgroundTint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/foodAmount"
            android:padding="0dp"
            />

        <Button
            android:id="@+id/cardAddToCartButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:backgroundTint="@color/cart_green"
            android:padding="0dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/foodImage"
            app:layout_constraintRight_toLeftOf="@id/minusButton"
            android:textSize="10sp"/>





    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>